Functions are now re-entrant. Recurse away.