@@ -10,18 +10,12 @@ import com.googlecode.linkedlisp.NoReturnException;
 import com.googlecode.linkedlisp.State;
 import com.hp.hpl.jena.rdf.model.RDFList;
 
-public class Car implements Function {
-
-    private ListExpression params;
-
-    public void setParameters(ListExpression list) {
-        params = list;
-    }
+public class Car extends Function {
 
     public Object evaluate(State s) throws Exception {
-        Object value = params.get(0).evaluate(s);
+        Object value = s.getParameterList().getFirst().evaluate(s);
         if (value instanceof Iterable) {
-            return ((Iterable)params.get(0).evaluate(s)).iterator().next();
+            return ((Iterable)value).iterator().next();
         } else if (value.getClass().isArray()) {
             return Array.get(value, 0);
         } else if (value instanceof RDFList) {
@@ -32,7 +26,7 @@ public class Car implements Function {
     }
 
     @Override
-    public Object getValue(State s) {
+    public Object getValue() {
         return "car";
     }
 
